--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="profile-photo">
-      <img src="mon-portfolio\image\photo.jpeg" alt="Kodjo René Tamanyon" />
+      <img src="image\photo.jpeg" alt="Kodjo René Tamanyon" />
     </div>
     <div class="intro">
       <h1>Kodjo René Tamanyon</h1>
